2008-02-26  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvolumemonitor.c:
	Use standard lock instead of recursive lock.

2008-02-25  David Zeuthen  <davidz@redhat.com>

	* configure.ac: fix typo in AC_ARG_ENABLE for gphoto2

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * common/gdbusutils.c:
        * daemon/dbus-gmain.c:
	Only use dbus_watch_get_unix_fd for
	dbus >= 1.1.1

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.8 ===

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* programs/Makefile.am (EXTRA_DIST):
	Add gvfs-bash-completion.sh

	* NEWS:
	Update for release

2008-02-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* daemon/gvfsbackendsftp.c:
	* daemon/gvfsbackendsmb.c:
	Update to gvfskeyring api changes

	* daemon/gvfskeyring.c:
	* daemon/gvfskeyring.h:
	Add object, authtype and port parameters for both save and
	lookup. 
	
2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Initial take on implementing delete.

	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	Add http_error_code_from_status helper function.

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Also check if the URL is a directory by doing a PROPFIND in
	addition to the OPTIONS. That will also force authentication
	since some servers (e.g. Zope) allow OPTIONS without doing
	authentication.

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * client/sftpuri.c:
	Make sure both no-port and port 22 refer to the same mount.
	
        * daemon/gvfsbackendsftp.c:
	Support ports. (#518504)

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Keep the SoupMessage around for as long as Multistatus is
	valid.

2008-02-25  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h: