@@ -1,3 +1,9 @@
+2008-02-26  Benjamin Otte  <otte@gnome.org>
+
+	* daemon/gvfsjob.c: (g_vfs_job_failed_from_error):
+	* daemon/gvfsjob.h:
+	make the error argument const
+
 2008-02-26  Alexander Larsson  <alexl@redhat.com>
 
         * client/gdaemonvolumemonitor.c:
